Refactor JobHandler to utilize ExecutionModeUtils for module access flags